Quite a large chunk of the user interface is done. It feels so dirty going along with the reddit style. It's just ..so whore-ish.

--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -13,11 +13,12 @@
 			],
 
 			"js": [
+				"lib/mustache.js",
 				"karmo.js"
 			],
 
 			"css": [
-				"karmo.css"
+				"lib/karmo.css"
 			]
 		}
 	],
@@ -28,10 +29,17 @@
 	"permissions": [
 	    "cookies",
 		"tabs",
-		"history",
+		"storage",
 		"http://reddit.com/*",
 		"https://reddit.com/*",
 		"http://*.reddit.com/*",
 		"https://*.reddit.com/*"
-	]
+	],
+
+	"web_accessible_resources": [
+		"templates/small-bet-view.template",
+		"templates/large-bet-view.template",
+		"templates/main-bet-view.template",
+		"templates/dashboard.template"
+	 ]
 }
