Server started. Not bad for a day. Have to fix that WEIRD notification problem. Good night.

--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -40,6 +40,8 @@
 		"templates/small-bet-view.template",
 		"templates/large-bet-view.template",
 		"templates/main-bet-view.template",
-		"templates/dashboard.template"
+		"templates/notification.template",
+		"templates/dashboard.template",
+		"assets/audio/chaching.mp3"
 	 ]
 }
