--- a/Chrome/templates/large-bet-view.template
+++ b/Chrome/templates/large-bet-view.template
@@ -5,12 +5,20 @@
 			<h3 class="odds">10/1</h3>
 			<h5>HOT!</h5>
 		</figure><figure class="edit-bet">
-			<div>
-				<h3>Bet <input type="number" class="bet-int" value="0"/> on this post.</h3>
-				<h4><input type="range" class="bet-slider" /></h4>
-			</div>
-			<h5 class="karma">Your Karma now is <span>1800</span>, if you lose it's <span>1600 <em>(-200)</em></span></h3>
-			<h5 class="karmo">Your Karmo now is <span>12000</span>, if you win it's <span>18000 <em>(+6000)</em></span></h3>
+			<h3>Bet <input type="number" class="bet-int" value="0"/> of your karma on <br>
+				this post's
+					<select>
+						<option value="karma">karma</option>
+						<option value="comment-count">Comment Count</option>
+					</select> to <br>
+					reach <input type="number" value="0" /> in <input type="number" value="1" /> 
+						<select>
+							<option>hours</option>
+							<option>mins</option>
+						</select>.</h3>
+			<input type="range" class="bet-slider" />
+			<h5 class="karma">Your Karma now is <span>1800</span>. If you lose, it will be <span>1600 <em>(-200)</em></span></h3>
+			<h5 class="karmo">Your Karmo now is <span>12000</span>. If you win, it will be <span>18000 <em>(+6000)</em></span></h3>
 			<button class="cancel-bet">Cancel</button><button class="place-bet">Place bet</button>
 		</figure>
 	</section><section class="bet-stats">
