--- a/Chrome/templates/large-bet-view.template
+++ b/Chrome/templates/large-bet-view.template
@@ -28,6 +28,7 @@
 			<li><span>120000</span> is the highest bet from <span>renegademaniac</span>.</li>
 			<li><span>4</span> bets have already been won.</li>
 			<li><span>6</span> bets are still pending.</li>
+			<li><a href="#">More information.</a>
 		</ul>
 	</section>
 </div>
